# fesom2

./: CMakeLists.txt  configure.sh  env.sh
.github/inactive_workflows/: fesom2_icepack.yml
.github/workflows/: fesom2.1.yml  fesom2_openmp.yml
cmake/: FindNETCDF.cmake
lib/parms/: CMakeLists.txt
src/: CMakeLists.txt  MOD_DYN.F90  MOD_ICE.F90  MOD_MESH.F90  MOD_PARTIT.F90  MOD_TRACER.F90  fesom-config.cmake.in  fesom_module.F90  gen_halo_exchange.F90  gen_modules_read_NetCDF.F90
src/async_threads_cpp/: CMakeLists.txt
src/ifs_interface/: iom.F90
test/ifs_interface/: configure.sh
test_downstream/: CMakeLists.txt  README
